--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
-    "electron": "^36.4.0"
+    "electron": "^36.4.0",
+    "electron-store": "^10.1.0"
   }
 }
