--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,50 @@
-node_modules/*
+# Dependencies
+node_modules/
+
+# System files
 .DS_Store
+Thumbs.db
+
+# Generated audio files
+*.wav
+piper-output.wav
 out.wav
-voices/*
+
+# Test/temporary files
 null
+*.tmp
+*.temp
+
+# Logs
+*.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+# Voice models (large files)
+voices/
+
+# Environment variables
+.env*
+
+# Build output
+dist/
+build/
+
+# Temporary files
+*.tmp
+*.temp
+
+# IDE/Editor files
+.vscode/
+.idea/
+*.swp
+*.swo
+
+# OS generated files
+.DS_Store?
+ehthumbs.db
+Icon?
+
+# Electron specific
+out/
