--- a/package.json
+++ b/package.json
@@ -1,16 +1,213 @@
 {
   "name": "piper-electron",
   "version": "1.0.0",
+  "description": "A user-friendly Electron-based graphical interface for Piper TTS - fast, local neural text-to-speech with high-quality voices",
   "main": "main.js",
   "scripts": {
-    "start": "electron ."
+    "start": "electron .",
+    "dev": "electron . --dev",
+    "test": "jest",
+    "test:watch": "jest --watch",
+    "test:coverage": "jest --coverage",
+    "test:ci": "jest --coverage --watchAll=false",
+    "lint": "eslint .",
+    "lint:fix": "eslint . --fix",
+    "lint:check": "eslint . --max-warnings 0",
+    "pack": "electron-builder --dir",
+    "build": "electron-builder",
+    "build:mac": "electron-builder --mac",
+    "build:win": "electron-builder --win",
+    "build:linux": "electron-builder --linux",
+    "build:all": "electron-builder --mac --win --linux",
+    "dist": "electron-builder --publish=never",
+    "release": "electron-builder --publish=always",
+    "prebuild": "npm run lint:check && npm run test:ci"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "description": "",
+  "keywords": [
+    "electron",
+    "tts",
+    "text-to-speech",
+    "piper",
+    "neural",
+    "speech-synthesis",
+    "desktop-app",
+    "gui"
+  ],
+  "author": {
+    "name": "Piper-Electron Contributors",
+    "email": ""
+  },
+  "license": "MIT",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/davealaw/piper-electron.git"
+  },
+  "homepage": "https://github.com/davealaw/piper-electron#readme",
+  "bugs": {
+    "url": "https://github.com/davealaw/piper-electron/issues"
+  },
   "dependencies": {
-    "electron": "^36.4.0",
     "electron-store": "^10.1.0"
+  },
+  "devDependencies": {
+    "electron": "^36.4.0",
+    "@babel/core": "^7.23.0",
+    "@babel/preset-env": "^7.23.0",
+    "@eslint/js": "^9.34.0",
+    "@jest/globals": "^29.7.0",
+    "babel-jest": "^29.7.0",
+    "electron-builder": "^24.13.3",
+    "eslint": "^9.34.0",
+    "eslint-plugin-import": "^2.32.0",
+    "eslint-plugin-node": "^11.1.0",
+    "jest": "^29.7.0",
+    "jest-environment-jsdom": "^29.7.0",
+    "jsdom": "^23.0.1"
+  },
+  "build": {
+    "appId": "com.piperelectron.app",
+    "productName": "Piper TTS",
+    "copyright": "Copyright © 2024 Piper-Electron Contributors",
+    "directories": {
+      "output": "dist",
+      "buildResources": "build"
+    },
+    "files": [
+      "**/*",
+      "!**/node_modules/*/{CHANGELOG.md,README.md,README,readme.md,readme}",
+      "!**/node_modules/*/{test,__tests__,tests,powered-test,example,examples}",
+      "!**/node_modules/*.d.ts",
+      "!**/node_modules/.bin",
+      "!**/*.{iml,o,hprof,orig,pyc,pyo,rbc,swp,csproj,sln,xproj}",
+      "!.editorconfig",
+      "!**/._*",
+      "!**/{.DS_Store,.git,.hg,.svn,CVS,RCS,SCCS,.gitignore,.gitattributes}",
+      "!**/{__pycache__,thumbs.db,.flowconfig,.idea,.vs,.nyc_output}",
+      "!**/{appveyor.yml,.travis.yml,circle.yml}",
+      "!**/{npm-debug.log,yarn.lock,.yarn-integrity,.yarn-metadata.json}",
+      "!coverage/**/*",
+      "!dist/**/*",
+      "!voices/**/*",
+      "!tests/**/*",
+      "!*.test.js",
+      "!*.spec.js",
+      "!.eslintrc*",
+      "!.eslintignore",
+      "!eslint.config.js",
+      "!jest.config.js",
+      "!babel.config.js",
+      "!.babelrc*"
+    ],
+    "extraResources": [
+      {
+        "from": "voices",
+        "to": "voices",
+        "filter": ["**/*"]
+      }
+    ],
+    "mac": {
+      "category": "public.app-category.productivity",
+      "hardenedRuntime": true,
+      "gatekeeperAssess": false,
+      "entitlements": "build/entitlements.mac.plist",
+      "entitlementsInherit": "build/entitlements.mac.plist",
+      "target": [
+        {
+          "target": "default",
+          "arch": ["universal"]
+        }
+      ],
+      "type": "distribution",
+      "minimumSystemVersion": "10.15.0"
+    },
+    "dmg": {
+      "sign": false,
+      "contents": [
+        {
+          "x": 130,
+          "y": 220
+        },
+        {
+          "x": 410,
+          "y": 220,
+          "type": "link",
+          "path": "/Applications"
+        }
+      ],
+      "window": {
+        "width": 540,
+        "height": 380
+      }
+    },
+    "win": {
+      "target": [
+        {
+          "target": "nsis",
+          "arch": ["x64", "ia32"]
+        },
+        {
+          "target": "portable",
+          "arch": ["x64", "ia32"]
+        }
+      ],
+      "publisherName": "Piper-Electron Contributors",
+      "verifyUpdateCodeSignature": false
+    },
+    "nsis": {
+      "oneClick": false,
+      "perMachine": false,
+      "allowToChangeInstallationDirectory": true,
+      "deleteAppDataOnUninstall": false,
+      "createDesktopShortcut": true,
+      "createStartMenuShortcut": true,
+      "shortcutName": "Piper TTS",
+      "include": "build/installer.nsh",
+      "artifactName": "${productName}-Setup-${version}.${ext}"
+    },
+    "portable": {
+      "artifactName": "${productName}-Portable-${version}.${ext}"
+    },
+    "linux": {
+      "category": "AudioVideo",
+      "target": [
+        {
+          "target": "AppImage",
+          "arch": ["x64"]
+        },
+        {
+          "target": "deb",
+          "arch": ["x64"]
+        },
+        {
+          "target": "rpm",
+          "arch": ["x64"]
+        },
+        {
+          "target": "tar.xz",
+          "arch": ["x64"]
+        }
+      ],
+      "desktop": {
+        "Name": "Piper TTS",
+        "Comment": "Neural Text-to-Speech GUI",
+        "Categories": "AudioVideo;Audio;Player;",
+        "Keywords": "tts;speech;audio;piper;text-to-speech;"
+      }
+    },
+    "deb": {
+      "priority": "optional",
+      "depends": []
+    },
+    "rpm": {
+      "category": "Applications/Multimedia"
+    },
+    "compression": "normal",
+    "productName": "Piper TTS",
+    "artifactName": "${productName}-${version}-${os}-${arch}.${ext}",
+    "publish": {
+      "provider": "github",
+      "owner": "davealaw",
+      "repo": "piper-electron"
+    }
   }
 }
